// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items = 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "images": "",
      "name": "mobile",
      "price": 10,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Book of saverkar",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "images": "",
      "name": "Book of saverkar",
      "price": 10,
    },
  ],
}
`;

exports[`can add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "images": "",
        "name": "mobile",
        "price": 10,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "images": "",
        "name": "Book of saverkar",
        "price": 10,
      },
    ],
  },
]
`;
